--- a/html/css/openscience.css
+++ b/html/css/openscience.css
@@ -118,7 +118,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url("/images/tor.png");
+  background-image: url("https://github.com/isler555/Open-Science-Guides-Collection/blob/main/html/images/tor.png");
   background-repeat: no-repeat;
   background-size: cover;
   top: -20mm;
